--- a/Knight.html
+++ b/Knight.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="game-container">
-        <script type="module" src="./phaser.09c160a4.js"></script>
-        <script type="module" src="./main.1e43358e.js"></script>
+        <script src="/phaser.09c160a4.js"></script>
+        <script src="/main.1e43358e.js"></script>
     </div>
 </body>
 <style>* {
