--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1>Choose a game to play:</h1>
         <ul id="game-list">
             <li>
-                <a href="./Knight.html">
+                <a href="/The-Game/Knight.html">
                     <button>Knight</button>
                     <div class="game-info">
                         <p>A game about a knight battleing all kind of monster.</p>
