--- a/index.html
+++ b/index.html
@@ -71,24 +71,16 @@
             font-size: 20px;
             cursor: pointer;
         }</style>
-<script src="/Knight.js"></script></head>
+
 <body>
     <div id="game-container">
         <h1>Choose a game to play:</h1>
         <ul id="game-list">
             <li>
-                <a href="/Knight.html">
+                <a href="/The-Game/Knight.html">
                     <button>Knight</button>
                     <div class="game-info">
                         <p>A game about a knight battleing all kind of monster.</p>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="/BomberMan.html">
-                    <button>BomberMan</button>
-                    <div class="game-info">
-                        <p>A game about a BomberMan.</p>
                     </div>
                 </a>
             </li>
